Movie detaisl screen

--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -6,8 +6,22 @@
     app:startDestination="@id/popularMoviesFragment">
 
     <fragment
-        tools:layout="@layout/fragment_popular_movies"
         android:id="@+id/popularMoviesFragment"
-        android:name="com.example.movies.presentation.movies.PopularMoviesFragment"
-        android:label="PopularMoviesFragment" />
+        android:name="com.example.movies.presentation.ui.movies.PopularMoviesFragment"
+        android:label="PopularMoviesFragment"
+        tools:layout="@layout/fragment_popular_movies">
+        <action
+            android:id="@+id/action_popularMoviesFragment_to_movieDetailsFragment"
+            app:destination="@id/movieDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/movieDetailsFragment"
+        android:name="com.example.movies.presentation.ui.details.MovieDetailsFragment"
+        android:label="MovieDetailsFragment"
+        tools:layout="@layout/fragment_movie_details">
+        <argument
+            android:name="id"
+            app:argType="long"
+            app:nullable="false" />
+    </fragment>
 </navigation>
