--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="movie"
-            type="com.example.movies.presentation.movies.PopularMoviesUiState.MoviesUiState" />
+            type="com.example.movies.presentation.ui.movies.PopularMoviesUiState.MoviesUiState" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
